--- a/OpenXML/DDDN.Localization.OpenXML.csproj
+++ b/OpenXML/DDDN.Localization.OpenXML.csproj
@@ -29,6 +29,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="DocumentFormat.OpenXml" Version="2.7.2" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\..\Logging\Messages\DDDN.Logging.Messages.csproj" />
 	</ItemGroup>
 
