--- a/OpenXML/DDDN.Localization.OpenXML.csproj
+++ b/OpenXML/DDDN.Localization.OpenXML.csproj
@@ -6,10 +6,10 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<Product>DDDN Localization Library</Product>
+		<Product>DDDN.Localization.OpenXML Library</Product>
 		<Copyright>Copyright(C) 2017 Lukasz Jaskiewicz</Copyright>
 		<Authors>Lukasz Jaskiewicz (lukasz@jaskiewicz.de)</Authors>
-		<Description>DDDN Localization Library</Description>
+		<Description>DDDN.Localization.OpenXML Library</Description>
 		<PackageProjectUrl>www.jaskiewicz.de</PackageProjectUrl>
 		<Version>0.0.0.1</Version>
 		<AssemblyVersion>0.0.0.1</AssemblyVersion>
