changed repository folder  structure

--- a/samples/DDDN.Localization.Samples/DDDN.Localization.Samples.csproj
+++ b/samples/DDDN.Localization.Samples/DDDN.Localization.Samples.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\DDDN.Localization.OpenXML\DDDN.Localization.OpenXML.csproj" />
+  </ItemGroup>
+
 </Project>
