--- a/src/DDDN.Localization.OpenXML/DDDN.Localization.OpenXML.csproj
+++ b/src/DDDN.Localization.OpenXML/DDDN.Localization.OpenXML.csproj
@@ -20,20 +20,12 @@
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<OutputPath>..\..\_output\bin\Debug\</OutputPath>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<OutputPath>..\..\_output\bin\Release\</OutputPath>
-	</PropertyGroup>
-
 	<ItemGroup>
 	  <PackageReference Include="DocumentFormat.OpenXml" Version="2.7.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Logging\Messages\DDDN.Logging.Messages.csproj" />
+	  <ProjectReference Include="..\..\..\Logging\src\DDDN.Logging.Messages\DDDN.Logging.Messages.csproj" />
 	</ItemGroup>
 
 </Project>
